[package]
name = "taskctx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
axhal = { path = "../axhal" }
spinbase = { path = "../../crates/spinbase" }
memory_addr = { path = "../../crates/memory_addr" }
