[package]
name = "taskctx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
hal_base = { git = "ssh://git@github.com/shilei-massclouds/hal_base.git" }
spinirq = { git = "ssh://git@github.com/shilei-massclouds/spinirq.git" }
axtype = { git = "ssh://git@github.com/shilei-massclouds/axtype.git" }
